--- a/PostManager/post-manager/src/app/posts/posts-list/posts-list.component.html
+++ b/PostManager/post-manager/src/app/posts/posts-list/posts-list.component.html
@@ -6,9 +6,9 @@
         <h3>{{ post.title }}</h3>
         <p><strong>Usuario:</strong> {{ post.userId }}</p>
         <p>{{ post.body }}</p>
-        <button>Ver</button>
-        <button>Editar</button>
-        <button>Eliminar</button>
+        <button (click)="view(post.id)">Ver</button>
+        <button (click)="edit(post.id)">Editar</button>
+        <button (click)="delete(post.id)">Eliminar</button>
       </li>
     </ul>
   </div>
