feat: añadir spinner y toasts; integrar en posts list/form/detail

--- a/PostManager/post-manager/src/app/app.html
+++ b/PostManager/post-manager/src/app/app.html
@@ -330,6 +330,13 @@
   </div>
 </main>
 
+<!-- global UI helpers -->
+<app-spinner></app-spinner>
+<app-toasts></app-toasts>
+
+<!-- router outlet -->
+<router-outlet></router-outlet>
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
