feat: reemplazar window.confirm por ConfirmService y dialog; usar toasts para notificaciones

--- a/PostManager/post-manager/src/app/app.html
+++ b/PostManager/post-manager/src/app/app.html
@@ -333,6 +333,7 @@
 <!-- global UI helpers -->
 <app-spinner></app-spinner>
 <app-toasts></app-toasts>
+<app-confirm-dialog></app-confirm-dialog>
 
 <!-- router outlet -->
 <router-outlet></router-outlet>
