--- a/PostManager/post-manager/src/app/posts/posts-list/posts-list.component.html
+++ b/PostManager/post-manager/src/app/posts/posts-list/posts-list.component.html
@@ -1,5 +1,8 @@
 <section>
-  <h2>Publicaciones</h2>
+  <div class="header">
+    <h2>Publicaciones</h2>
+    <button class="new-btn" (click)="create()">Nueva publicación</button>
+  </div>
   <div *ngIf="posts$ | async as posts; else loading">
     <ul>
       <li *ngFor="let post of posts">
